--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-material-ui": "^0.0.1",
     "react-scripts": "3.2.0",
+    "reactstrap": "^8.0.1",
     "styled-components": "^4.4.0"
   },
   "scripts": {
